--- a/SwipeView.xib
+++ b/SwipeView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -18,13 +18,13 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SwipeView" customModule="HiddenGem" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vvj-aj-ZDz">
                     <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="companyImage" translatesAutoresizingMaskIntoConstraints="NO" id="kGD-BU-Osk" customClass="RoundedEnds" customModule="HiddenGem" customModuleProvider="target">
-                            <rect key="frame" x="8" y="8" width="327" height="277"/>
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="285"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GREENWOOD CAMPBELL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WA8-EB-ozZ" customClass="StyledLabel" customModule="HiddenGem" customModuleProvider="target">
@@ -43,7 +43,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EA2-UU-KVE" customClass="GradientView" customModule="HiddenGem" customModuleProvider="target">
-                            <rect key="frame" x="8" y="283" width="327" height="5"/>
+                            <rect key="frame" x="0.0" y="283" width="343" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <userDefinedRuntimeAttributes>
@@ -99,13 +99,23 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Qd-Io-EE7">
+                    <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
+                    <connections>
+                        <action selector="swipeView:" destination="iN0-l3-epB" eventType="touchUpInside" id="x61-xC-fmB"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="Vvj-aj-ZDz" secondAttribute="bottom" id="0JI-aT-yQh"/>
                 <constraint firstItem="Vvj-aj-ZDz" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="8CY-Da-W98"/>
                 <constraint firstAttribute="trailing" secondItem="Vvj-aj-ZDz" secondAttribute="trailing" id="Duk-fd-nT6"/>
+                <constraint firstItem="1Qd-Io-EE7" firstAttribute="leading" secondItem="Vvj-aj-ZDz" secondAttribute="leading" id="U7W-Wh-xrZ"/>
                 <constraint firstItem="Vvj-aj-ZDz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fv4-kY-Dkt"/>
+                <constraint firstItem="1Qd-Io-EE7" firstAttribute="bottom" secondItem="Vvj-aj-ZDz" secondAttribute="bottom" id="qmR-8T-c6c"/>
+                <constraint firstItem="1Qd-Io-EE7" firstAttribute="trailing" secondItem="Vvj-aj-ZDz" secondAttribute="trailing" id="wOt-3p-UBN"/>
+                <constraint firstItem="1Qd-Io-EE7" firstAttribute="top" secondItem="Vvj-aj-ZDz" secondAttribute="top" id="zAa-KO-VZa"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
