--- a/Main.storyboard
+++ b/Main.storyboard
@@ -44,7 +44,7 @@
         <scene sceneID="9t1-5c-Kg0">
             <objects>
                 <tableViewController id="ygT-hE-MQ6" customClass="BackTableViewController" customModule="HiddenGem" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gGq-O1-K5f">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gGq-O1-K5f">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -53,7 +53,7 @@
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qbk-jy-n35" id="t46-eq-HDK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -64,7 +64,7 @@
                                 <rect key="frame" x="0.0" y="72" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r4M-tD-DJW" id="eQ5-Gu-JHV">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -131,7 +131,6 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jOp-MW-gIY" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="17" y="20" width="380" height="511"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vhA-cm-hYg" customClass="dropShadow" customModule="HiddenGem" customModuleProvider="target">
                                 <rect key="frame" x="106" y="576" width="60" height="60"/>
@@ -182,7 +181,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.92941176470588238" green="0.94509803921568625" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="jOp-MW-gIY" firstAttribute="trailing" secondItem="uCo-tL-KTS" secondAttribute="trailingMargin" constant="3" id="8Nq-q9-Aro"/>
                             <constraint firstItem="jOp-MW-gIY" firstAttribute="leading" secondItem="uCo-tL-KTS" secondAttribute="leadingMargin" constant="-3" id="c5G-fQ-72G"/>
@@ -191,7 +190,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bKW-Nx-oWe">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="add" id="vfE-eL-3VO">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" style="plain" id="vfE-eL-3VO">
                             <color key="tintColor" red="0.031372549020000001" green="0.31372549020000001" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="zpd-bX-jiU">
@@ -769,8 +768,9 @@
         <image name="dislike" width="250" height="250"/>
         <image name="like" width="258" height="258"/>
         <image name="logInImage" width="375" height="135"/>
+        <image name="menu-icon" width="25" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="apO-6V-5k2"/>
+        <segue reference="j5u-TW-oUy"/>
     </inferredMetricsTieBreakers>
 </document>
