--- a/MoreInfo.xib
+++ b/MoreInfo.xib
@@ -12,27 +12,114 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MoreInfo" customModule="HiddenGem" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
+            <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pj8-3G-tKx">
-                    <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
+                    <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTg-sa-oax">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="419"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <connections>
-                                <action selector="moreInfo:" destination="iN0-l3-epB" eventType="touchUpInside" id="yY6-9x-QMC"/>
-                            </connections>
-                        </button>
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JrZ-rc-QHp">
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QO7-ak-P36">
+                                    <rect key="frame" x="150" y="33" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9PG-mQ-6S4">
+                                    <rect key="frame" x="150" y="91" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebm-Vr-bVb">
+                                    <rect key="frame" x="150" y="166" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8f-Pi-vOI">
+                                    <rect key="frame" x="150" y="241" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJ8-sX-zS1">
+                                    <rect key="frame" x="150" y="314" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEX-W8-JKv">
+                                    <rect key="frame" x="150" y="389" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J20-Jv-7yK">
+                                    <rect key="frame" x="150" y="457" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Qe-gs-QZM">
+                                    <rect key="frame" x="150" y="529" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q2h-jD-0tF">
+                                    <rect key="frame" x="150" y="577" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="J20-Jv-7yK" firstAttribute="leading" secondItem="4Qe-gs-QZM" secondAttribute="leading" id="12G-E3-OvH"/>
+                                <constraint firstItem="4Qe-gs-QZM" firstAttribute="top" secondItem="J20-Jv-7yK" secondAttribute="bottom" constant="51" id="6nH-JZ-glF"/>
+                                <constraint firstItem="J20-Jv-7yK" firstAttribute="top" secondItem="sEX-W8-JKv" secondAttribute="bottom" constant="47" id="EkM-Ak-0Fd"/>
+                                <constraint firstItem="sEX-W8-JKv" firstAttribute="leading" secondItem="J20-Jv-7yK" secondAttribute="leading" id="INX-jM-cln"/>
+                                <constraint firstItem="Ebm-Vr-bVb" firstAttribute="leading" secondItem="F8f-Pi-vOI" secondAttribute="leading" id="IuP-7j-w8P"/>
+                                <constraint firstItem="9PG-mQ-6S4" firstAttribute="top" secondItem="QO7-ak-P36" secondAttribute="bottom" constant="37" id="Jfo-uv-H7R"/>
+                                <constraint firstItem="QO7-ak-P36" firstAttribute="centerX" secondItem="JrZ-rc-QHp" secondAttribute="centerX" id="Lk2-WV-z27"/>
+                                <constraint firstItem="F8f-Pi-vOI" firstAttribute="top" secondItem="Ebm-Vr-bVb" secondAttribute="bottom" constant="54" id="LnV-JB-2Nv"/>
+                                <constraint firstItem="yJ8-sX-zS1" firstAttribute="leading" secondItem="sEX-W8-JKv" secondAttribute="leading" id="Mi9-y4-yQw"/>
+                                <constraint firstItem="Ebm-Vr-bVb" firstAttribute="top" secondItem="9PG-mQ-6S4" secondAttribute="bottom" constant="54" id="QhY-NN-4wQ"/>
+                                <constraint firstItem="yJ8-sX-zS1" firstAttribute="top" secondItem="F8f-Pi-vOI" secondAttribute="bottom" constant="52" id="Wyh-m4-eqJ"/>
+                                <constraint firstItem="q2h-jD-0tF" firstAttribute="top" secondItem="4Qe-gs-QZM" secondAttribute="bottom" constant="27" id="dqS-cg-BHA"/>
+                                <constraint firstAttribute="bottom" secondItem="q2h-jD-0tF" secondAttribute="bottom" constant="25" id="nnn-li-Bd2"/>
+                                <constraint firstItem="4Qe-gs-QZM" firstAttribute="leading" secondItem="q2h-jD-0tF" secondAttribute="leading" id="ntf-q6-x8g"/>
+                                <constraint firstItem="QO7-ak-P36" firstAttribute="top" secondItem="JrZ-rc-QHp" secondAttribute="top" constant="33" id="rKw-Eg-taw"/>
+                                <constraint firstItem="QO7-ak-P36" firstAttribute="leading" secondItem="9PG-mQ-6S4" secondAttribute="leading" id="vR9-l9-H83"/>
+                                <constraint firstItem="sEX-W8-JKv" firstAttribute="top" secondItem="yJ8-sX-zS1" secondAttribute="bottom" constant="54" id="yV8-bx-9Dn"/>
+                                <constraint firstItem="F8f-Pi-vOI" firstAttribute="leading" secondItem="yJ8-sX-zS1" secondAttribute="leading" id="ycg-Lb-jiQ"/>
+                                <constraint firstAttribute="trailing" secondItem="QO7-ak-P36" secondAttribute="trailing" constant="151" id="zA0-zG-qi9"/>
+                                <constraint firstItem="9PG-mQ-6S4" firstAttribute="leading" secondItem="Ebm-Vr-bVb" secondAttribute="leading" id="zu2-ss-kpV"/>
+                            </constraints>
+                        </scrollView>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="JrZ-rc-QHp" secondAttribute="trailing" id="Sq1-kI-58y"/>
+                        <constraint firstItem="JrZ-rc-QHp" firstAttribute="leading" secondItem="pj8-3G-tKx" secondAttribute="leading" id="if8-mw-5jK"/>
+                        <constraint firstAttribute="bottom" secondItem="JrZ-rc-QHp" secondAttribute="bottom" id="jHe-6Y-zjf"/>
+                        <constraint firstItem="JrZ-rc-QHp" firstAttribute="top" secondItem="pj8-3G-tKx" secondAttribute="top" id="pYy-YP-4Nj"/>
+                    </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="6"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTg-sa-oax">
+                    <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <connections>
+                        <action selector="moreInfo:" destination="iN0-l3-epB" eventType="touchUpInside" id="yY6-9x-QMC"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="pj8-3G-tKx" secondAttribute="trailing" id="BKM-oO-WSS"/>
@@ -44,7 +131,7 @@
             <connections>
                 <outlet property="moreInfo" destination="pj8-3G-tKx" id="LZL-wQ-g0D"/>
             </connections>
-            <point key="canvasLocation" x="33.5" y="56.5"/>
+            <point key="canvasLocation" x="33.5" y="158.5"/>
         </view>
     </objects>
 </document>
